--- a/DOR-LOL/package.json
+++ b/DOR-LOL/package.json
@@ -6,10 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel serve -d dist src/index.html",
-    "build": "rm -rf build && parcel build -d build --public-url https://Angel170605.github.io/DOR-LOL-1T src/index.html",
+    "build": "rm -rf build && parcel build -d build --public-url /DOR-LOL-1T/ src/index.html",
     "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  },
+  "dependencies": {
+    "parcel-bundler": "^1.12.5"
+  }
 }
